# marshmallow-jsonschema

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES  CONTRIBUTING.md  LICENSE  README.md  ReleaseNotes.rst  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: black.yml  build.yml  codeql-analysis.yml  mypy.yml  ossar-analysis.yml  pytest_and_coverage.yml  release.yml
docs/: index.md
example/: example.py
marshmallow_jsonschema/: __init__.py  base.py  validation.py
marshmallow_jsonschema/extensions/: react_jsonschema_form.py
tests/: __init__.py  test_additional_properties.py  test_dump.py  test_imports.py  test_react_extension.py  test_validation.py
unreleased_notes/: .gitkeep  10.feature  14.feature  15.bugfix  17.bugfix  37.build  37.doc  43.build  46.bugfix  new_contributors.contrib
